--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ django-ckeditor = "*"
 pyyaml = "*"
 uritemplate = "*"
 drf-yasg = "*"
-environs = {extras = ["django"], version = "*"}
+environs = {version = "==8.0.0", extras = ["django"]}
 psycopg2-binary = "*"
 whitenoise = "*"
 gunicorn = "*"
